Explain repr str, copy, deepcopy

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -2910,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 251,
    "id": "f480d448-e790-437c-96a7-04e929c442d2",
    "metadata": {},
    "outputs": [],
@@ -2930,7 +2930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 253,
    "id": "551265b0-135d-4327-a7f3-f021897ea8f8",
    "metadata": {},
    "outputs": [
@@ -2940,7 +2940,7 @@
        "'Elf'"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2952,15 +2952,592 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "id": "47cf608f-ebb1-464a-8d45-aef638edc746",
    "metadata": {},
    "outputs": [],
    "source": [
     "c2 = Character()\n",
-    "c2.race\n",
-    "c2.race = "
+    "c2.race = 'Human'\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "d1f02702-bcee-4a7d-9fe6-b4c164e50951",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Human'"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c2.race\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "cbe228eb-660b-4905-a93d-1954b733e166",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Human'"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1.race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "id": "f5891837-202b-40fa-9463-1435a59da85b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we always will reffering to single class instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ed1e8da-2487-40a1-baa4-ae264c9a367e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data serializing\n",
+    "# we will save state in a file and then we can restore this state from file - in py this calling pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "id": "192d9805-8f3d-4b94-878e-d167fc22a7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character():\n",
+    "    def __init__(self, race, damage = 10):\n",
+    "        self.race = race\n",
+    "        self.damage = damage\n",
+    "        self.health = 100\n",
+    "\n",
+    "    def hit(self, damage):\n",
+    "        self.health -=damage;\n",
+    "\n",
+    "    def is_dead(self):\n",
+    "        return self.health == 0\n",
+    "\n",
+    "\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "id": "f558f90c-a860-4e9c-b59b-bfcdd6e83b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = Character('Elf')\n",
+    "c.hit(20)\n",
+    "c.health"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "id": "5b071b35-c762-4a04-a3fc-54f1d79fa51d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(r'/Users/stanislavkadyrov/Documents/python/game_state.bin','w+b') as f: #saving in directory\n",
+    "    pickle.dump(c,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "id": "97eee673-7f29-4ecf-ad56-81ec736ef706",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = None\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "id": "7fca8b9a-7ea7-4e3d-aaf6-36484ec26d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(r'/Users/stanislavkadyrov/Documents/python/game_state.bin','rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "print(c.health)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7cbfeb8-c245-4ae3-b6ca-c259b0434349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#but if we will change class realisation somehow but after pickling we will have old realisation of class, init method will nt execute second time\n",
+    "# but here dudnder methods will help us"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f20cd80b-37a6-4b2a-938b-b5263c863629",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character():\n",
+    "    def __init__(self, race, armor, damage = 10):\n",
+    "        self.race = race\n",
+    "        self.armor = armor\n",
+    "        self.damage = damage\n",
+    "        self.health = 100\n",
+    "\n",
+    "    def hit(self, damage):\n",
+    "        self.health -=damage;\n",
+    "\n",
+    "    def is_dead(self):\n",
+    "        return self.health == 0\n",
+    "\n",
+    "    def __setstate__(self, state): # this will help us to have file up to date \n",
+    "        self.race = state.get('race', 'Elf')\n",
+    "        self.damage = state.get('damage', 10)\n",
+    "        self.armor = state.get('armor', 20)\n",
+    "        self.health = state.get('health', 100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7223703-cfcf-4df7-89b9-8eb17a08c578",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#repr method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "id": "f03e2a37-1652-4ead-8652-a320b626a8b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[1, 2, 3]'"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [1,2,3]\n",
+    "repr(lst) # will return reproduceble string representation - we can evaluate this, we have some meta info \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "f923d631-4033-43c0-a6c3-3a032b66d540",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lst) # will use __str__ method to show the result in human readable format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "id": "4d2c9df7-091e-4a16-89cc-06cd61f1089d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval(repr(lst)) == lst # eval run code whitch we pass into it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c86bdb2e-a5de-45c2-852f-fec5883c656b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if class define dudner method __repr__ but not define __str__, with str calling will be called __repr__ instead, \n",
+    "# but in ither direction this is not working"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "id": "14e8df94-2d87-4246-a342-617c9c9850bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "dt = datetime.now()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "id": "e37efbc1-a361-4480-829d-7caa54c24980",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'datetime.datetime(2025, 4, 17, 12, 13, 32, 115004)'"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(dt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "id": "e55f3cc6-1d0a-4f16-a9b4-2f57fe9377fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-04-17 12:13:32.115004\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3bc3778-35da-4a87-994c-21c5a286b668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#here we can see the difference between them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "abdef8b2-b0f3-44e3-8043-3f89a0ddbeee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#eq method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "id": "4b448971-9e1c-4f20-8c45-eef53a222224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if we will compare two objects and we do not have __eq__ method defined - base eq will check the links for those obkects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "086127c0-4e90-419f-b3a2-d555c7a7520c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character():\n",
+    "    def __init__(self, race, damage = 10):\n",
+    "        self.race = race\n",
+    "        self.damage = damage\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Character('{self.race}', {self.damage})\"\n",
+    "\n",
+    "    def str(self):\n",
+    "        return f\"{self.race}, with damage: {self.damage})\"\n",
+    "\n",
+    "    def __eq__(self, other):\n",
+    "        if isinstance(other, Character):\n",
+    "            return self.race == other.race and self.damage == other.damage\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "id": "825da3ea-df00-4d03-87c9-4894210685df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character('Elf', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Character('Elf')\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "id": "9aeadc68-070c-419f-97a6-ff6f9f429652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = eval(repr(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "id": "8b98c89d-75ab-4220-a596-35bd4c496b03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c == d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "id": "584323f6-ae03-4fc1-87fb-7c5814ef6153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here we defined ourself eq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e5ff8ae-2785-437d-930e-fbd5554aa48f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Deep copy and shallow copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "id": "f7625b06-801e-4ebe-a716-ff4d5b35ccfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, [4, 5, 6, 7]]\n",
+      "[1, 2, 3, [4, 5, 6, 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1,2,3,[4,5,6]]\n",
+    "copiedList = list1.copy()\n",
+    "copiedList[3].append(7)\n",
+    "\n",
+    "print(list1)\n",
+    "print(copiedList) # so here we will have a reference but not a new obj so 7 will be added in both arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b028d8d6-a392-416a-930e-c5ed5f06122f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "id": "017a57e3-c863-4aa8-a314-2463dd18ae77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, [4, 5, 6, 7, 8, 8]]\n",
+      "[1, 2, 3, [4, 5, 6, 7, 8, 8]]\n",
+      "[1, 2, 3, [4, 5, 6, 7, 8, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "shallow_copy = copy.copy(list1)\n",
+    "shallow_copy[3].append(8)\n",
+    "print(shallow_copy)\n",
+    "deep_copy = copy.deepcopy(list1)\n",
+    "deep_copy[3].append(9)\n",
+    "print(shallow_copy)\n",
+    "\n",
+    "print(deep_copy) # now we will be adding only in one array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b373ea4d-744f-461c-bdd4-6dfba3d53367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lets define ourself copy and deepcopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0302ce95-bc73-434b-a2e5-3f25736a4b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Point():\n",
+    "    def __init__(self, x,y):\n",
+    "        self.x = x\n",
+    "        se;f.y = y\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Point({self.x}, {self,y})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7d2e905-321d-4979-bd29-8c819e06707e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Line(): \n",
+    "    def __init__(self, p1, p2):\n",
+    "        self.p1 = p1\n",
+    "        self.p2 = p2\n",
+    "\n",
+    "    def __copy__(self):\n",
+    "        cls = self.__class__\n",
+    "        result = cls.__new__(cls) # create new inctance\n",
+    "        result.__dict__.update(self.__dict__) # update dictionary(key-value pairs)\n",
+    "        return result\n",
+    "        \n",
+    "    def __deepcopy__(self, memo):\n",
+    "        cls = self.__class__\n",
+    "        result = cls.__new__(cls) # create new inctance\n",
+    "        memo [id(self)] = result # memoise link to prevent infifnite loop\n",
+    "        for k,v in self.__dict__.items():\n",
+    "            setattr(rerult, k, copy.deepcopy(v, memo)\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65e94d9-c7e3-4e32-b31d-3fbd8f2a8a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
