--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -3506,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 332,
    "id": "b7d2e905-321d-4979-bd29-8c819e06707e",
    "metadata": {},
    "outputs": [],
@@ -3527,17 +3527,338 @@
     "        result = cls.__new__(cls) # create new inctance\n",
     "        memo [id(self)] = result # memoise link to prevent infifnite loop\n",
     "        for k,v in self.__dict__.items():\n",
-    "            setattr(rerult, k, copy.deepcopy(v, memo)\n",
+    "            setattr(result, k, copy.deepcopy(v, memo))# deepcopy is checking that we already have this id and will pass this item\n",
     "        return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "id": "d65e94d9-c7e3-4e32-b31d-3fbd8f2a8a19",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##ENUMS - powerful instrument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "id": "de559928-b187-410e-89c5-025a98e5ac46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "id": "da133fe7-1393-4323-a836-ff4eb8907b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrafficLight(Enum):\n",
+    "    RED = 1\n",
+    "    YELLOW = 2\n",
+    "    GREEN = 3\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "id": "86ce0506-51cb-46db-acbe-c2ec0570810c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TrafficLight.RED\n",
+      "TrafficLight.YELLOW\n",
+      "TrafficLight.GREEN\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in TrafficLight:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "id": "8b1d920d-8938-48e8-b885-f1cd9b36e1b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RED\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(TrafficLight.RED.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "id": "9f5de5a4-b86f-42d4-84c3-9f4c7760d3ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TrafficLight.RED\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(TrafficLight(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "id": "c41707b3-4bb5-4b5f-90ca-789c5264d26e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TrafficLight.RED\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(TrafficLight['RED'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "id": "45dc7dad-1a5c-4097-a91e-a1f5bc0f9451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    " print(TrafficLight.RED.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "id": "fa99155f-5254-416a-a196-537606a94652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "id": "e92f538b-90ae-4297-8dc2-b09f5b8d9e84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Tournament:\n",
+    "    def __init__(self, name, year):\n",
+    "        self.name = name\n",
+    "        self.year = year\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "id": "8412b1d7-272e-4b00-b574-03233005a450",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"FIDE1\": 2018,\n",
+      "  \"FIDE2\": 2019\n",
+      "}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tournaments = {\n",
+    "    'FIDE1': 2018,\n",
+    "    'FIDE2': 2019,\n",
+    "}\n",
+    "\n",
+    "json_data = json.dumps(tournaments, indent = 2)# process serialization\n",
+    "print(json_data)\n",
+    "\n",
+    "loaded = json.loads(json_data) # process deserialization\n",
+    "print(type(loaded))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "id": "951111fb-569f-461a-a569-c74bd583fb0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def randoms(min, max, n):\n",
+    "    return [random.randint(min,max) for _ in range(n)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "id": "66b82144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Generators functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "id": "ac6ed41f-ae13-42fa-98c5-60ed339d446c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "22\n",
+      "13\n",
+      "12\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in randoms(10,30, 5):\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "id": "b336fa50-1fe8-4159-8cb3-dda45b3a993c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Problem right now that we have all randoms results with this items in memory whole time fom the begining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "id": "a0174fe0-18f4-4476-920e-faab380a1f59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets rewrite with generators\n",
+    "def randoms(min, max, n):\n",
+    "    for i in range(n):\n",
+    "        yield random.randint(min,max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 438,
+   "id": "1e1ced5c-ef30-4317-b0ce-0c65c3aaa881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "14\n",
+      "17\n",
+      "15\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in randoms(10,30,5):\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a69d8b7-15fb-4daa-b6d3-ced8fb90ecf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#here we're using lazy evaluation, we're executing one by one on every iteration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9be12375-8a40-47d2-8afa-d962e6f802b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#we can run with generator only once, then you need to recreate generator\n",
+    "#if we need to run throughtout it again - you need to put result in a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "id": "95934f13-fb4a-4c40-90fd-98b50972178c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 8, 10, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "rand_seq = randoms(1,10,10)\n",
+    "\n",
+    "five_taken = list(itertools.islice(rand_seq, 5))\n",
+    "print(five_taken)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0dfaca8-7563-4508-9b28-412d53d029df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#useful if we have big sequence(file, created sequence)"
+   ]
   }
  ],
  "metadata": {
