--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -3730,7 +3730,7 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "id": "66b82144",
+   "id": "abb9ea8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3858,6 +3858,500 @@
    "outputs": [],
    "source": [
     "#useful if we have big sequence(file, created sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e56c1077-b45d-4a0c-b5c7-f4fc66169f4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Module Itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 444,
+   "id": "d5db4188-6b16-4958-b788-1b6f26d0372a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All generators are iterators, but not all iterators are generators. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "id": "05c66803-3c67-4365-8621-5832d94a6580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "#Iteration is a general term for taking each item of something, one after another. Any time you use a loop, explicit or implicit, to go over a group of items, that is iteration.\n",
+    "\n",
+    "#In Python, iterable and iterator have specific meanings.\n",
+    "\n",
+    "#An iterable is an object that has an __iter__ method which returns an iterator, or which defines a __getitem__ method that can take sequential indexes starting from zero (and raises an IndexError when the indexes are no longer valid). So an iterable is an object that you can get an iterator from.\n",
+    "\n",
+    "#An iterator is an object with a next (Python 2) or __next__ (Python 3) method.\n",
+    "\n",
+    "#Whenever you use a for loop, or map, or a list comprehension, etc. in Python, the next method is called automatically to get each item from the iterator, thus going through the process of iteration.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 460,
+   "id": "915de75e-746c-430b-9942-ec81675b6832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list_iterator'>\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "iterable = [1,2,3]\n",
+    "iterator = iter(iterable) #__iter__ method which returns an iterator will be called\n",
+    "print(type(iterator))\n",
+    "\n",
+    "print(next(iterator)) #  __next__ method which will be called"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "id": "ac6bc55e-60c5-4a75-bf76-7bc467990c60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools as it\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "id": "dfb54f58-014c-4f4b-95e4-2f21d6e50792",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_nums = [x for x in range(10) if x%2 == 0] # here we're not using lazy evaluation\n",
+    "print(even_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "id": "59614e5c-da46-4540-8893-1af18a4aaec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count(0, 2)"
+      ]
+     },
+     "execution_count": 466,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even_nums = it.count(0,2)\n",
+    "even_nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 468,
+   "id": "337b1ec6-b3fe-4951-ac3f-242dd7582fb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 468,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(next(even_nums) for _ in range(5)) # here we're using lazy evaluation with generators and next method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "id": "8a706b14-b94a-470f-85bc-e70b10ee812e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'a'), (1, 'b'), (2, 'c')]"
+      ]
+     },
+     "execution_count": 472,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(it.count(), ['a', 'b', 'c']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 474,
+   "id": "b60b135b-710c-4107-af51-dfbaa5aa4571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_iterable(iterable, end = None):\n",
+    "    for x in iterable:\n",
+    "        if end:\n",
+    "            print(x, end = end)\n",
+    "        else:\n",
+    "            print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
+   "id": "12febe89-1f21-4d63-9a1e-e476440ed5d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 "
+     ]
+    }
+   ],
+   "source": [
+    "ones = it.repeat(1,5)\n",
+    "print_iterable(ones, ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad2d23c-f4ba-4425-8e8a-46e92c38075c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if we need to create seq of repeatable elems, we can use cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "id": "fc2c1273-92bd-4ebc-8980-fff630cb1883",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, -1, 1, -1, 1, -1, 1, -1, 1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pos_neg_ones = it.cycle([1, -1])\n",
+    "print(list(next(pos_neg_ones) for _ in range(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b228677-77f2-458b-89ee-60b4541b74f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accumulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 480,
+   "id": "9fd4e29c-236b-4de4-991a-0ede2a293b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 6, 10, 15, 21, 28]"
+      ]
+     },
+     "execution_count": 480,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.accumulate([1,2,3,4,5,6,7])) #accumulate one-by-one or we can pass custom foo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8eb8c710-3c04-4ee7-9b27-27777233b547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#chain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "id": "d0744784-a1ea-4437-ba17-7f4632b1dcc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D', 'E', 'F']"
+      ]
+     },
+     "execution_count": 484,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.chain('ABC', 'DEF')) #represent seq of elems one by one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d752dc6-4348-40e1-a243-9ad7648cd97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#dropwhile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "id": "2df0ebe5-91eb-49ed-9eca-06426efe456c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 486,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.dropwhile(lambda x: x<3, [1,2,3,4,5,6,7]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b1981f3-aaac-40b5-875b-cd016a56ffef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filterfalse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 488,
+   "id": "05b4f8ca-2c9b-4901-a6b5-b9d3a63a47cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 488,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(it.filterfalse(lambda x: x%2, range(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd3d4e53-9106-4663-9b90-321b7e4b54aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#zip_longest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 495,
+   "id": "0665abfd-ba75-4d0e-9165-e6e81ce5a38e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['post', 'drake', 'billie', 'monetochka']\n",
+    "dates = [11, 20, 21]\n",
+    "\n",
+    "players1 = dict(zip(names, dates)) # will cut off last one in lingest seq\n",
+    "players2 = dict(it.zip_longest(names, dates)) # will put None in pair with last one in lingest seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 497,
+   "id": "c3b51643-69b7-4606-b975-7d1f1f94a1e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'post': 11, 'drake': 20, 'billie': 21}"
+      ]
+     },
+     "execution_count": 497,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 499,
+   "id": "938d92cd-2d8f-4e88-ad41-0290ce44540e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'post': 11, 'drake': 20, 'billie': 21, 'monetochka': None}"
+      ]
+     },
+     "execution_count": 499,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 503,
+   "id": "170a2528-6332-4424-8ef4-3d13b09df1f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'post': 11, 'drake': 20, 'billie': 21, 'monetochka': 1}"
+      ]
+     },
+     "execution_count": 503,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players2 = dict(it.zip_longest(names, dates, fillvalue = 1))# with fillvalue we can pass default param\n",
+    "players2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bed4b036-c0ad-4e62-a7a9-72bd8f4cafe1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#groupby()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edaaf93c-2be5-4b2a-b1f1-35a4119c63cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#islice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 509,
+   "id": "f0a92f05-18cb-4d5a-b17c-b4ef95f80715",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[4, 8, 12, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_nums = it.count(0,2)\n",
+    "print([x for x in range(20) if x%2 ==0])\n",
+    "\n",
+    "print(list(it.islice(even_nums, 2, 10 ,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25b1bb09-b5ce-40f6-9519-9b68d8d8044a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#permutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec4e6723-b298-424e-a443-7f5b5d356d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#product"
    ]
   }
  ],
